--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,11 @@ name = "marched"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 axum = "0.7.5"
 axum-extra = { version = "0.9.3", features = ["cookie"] }
+chrono = { version = "0.4.38", default-features = false, features = ["clock", "std"] }
+ical = { version = "0.11.0", default-features = false, features = ["ical"] }
 once_cell = "1.19.0"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
